--- a/configs/gx6605s_defconfig
+++ b/configs/gx6605s_defconfig
@@ -14,6 +14,7 @@ CONFIG_RAM_BASE=0x10000000
 CONFIG_REGION_HIMEM=y
 CONFIG_HIGHMEM_OFFSET=0x40000000
 
+# drivers
 CONFIG_DT=y
 CONFIG_BUILTIN_DTB=y
 CONFIG_BUILTIN_DTB_PATH="boot/gx6605s.dtb"
@@ -30,4 +31,8 @@ CONFIG_UART_8250=y
 CONFIG_VIDEO=y
 CONFIG_VIDEO_GX6605S=y
 
+# kboot
 CONFIG_LOAD_ADDR=0x11000000
+
+# debug
+CONFIG_CHIP_GX6605S=y
