--- a/kernel/device/Makefile
+++ b/kernel/device/Makefile
@@ -1,2 +1,2 @@
-obj-y += init.o base.o bus.o device.o driver.o platform.o
+obj-y += init.o base.o bus.o device.o driver.o platform.o resource.o
 obj-$(CONFIG_DT) += platform-dt.o
