--- a/boot/Makefile
+++ b/boot/Makefile
@@ -1,16 +1,19 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
+include $(obj)dts/config.mk
+include $(obj)run/config.mk
 
-include $(src)/dts/config.mk
-include $(src)/run/config.mk
+########################################
+#  DTS                                 #
+########################################
 
-# dts
 DTC ?= scripts/dtc/dtc
-dtb := $(addprefix $(obj)/, $(dtb-y))
+dtb := $(addprefix $(obj), $(dtb-y))
 
 DTC: FORCE
-	$(Q)$(MAKE) $(build)=scripts/dtc
+	$(Q)$(MAKE) $(build)=scripts/dtc/
 
 dtc_cpp_flags += -I include -undef -D__DTS__ -nostdinc
+dtc-tmp = $(subst $(comma),_,$(dot-target).dts.tmp)
 
 quiet_cmd_dts_o_dtb = $(ECHO_DTB) $@
       cmd_dts_o_dtb = $(HOSTCC) -E $(dtc_cpp_flags) -x assembler-with-cpp -o $(dtc-tmp) $< ;    \
@@ -18,46 +21,40 @@ quiet_cmd_dts_o_dtb = $(ECHO_DTB) $@
                       $(addprefix -i,$(dir $<) $(DTC_INCLUDE)) $(DTC_FLAGS)                     \
                         -d $(depfile).dtc.tmp $(dtc-tmp) ;                                      \
                         cat $(depfile).dtc.tmp > $(depfile)
-                        
-dtc-tmp = $(subst $(comma),_,$(dot-target).dts.tmp)
-
-$(obj)/%.dtb: $(src)/dts/%.dts DTC FORCE
+$(obj)%.dtb: $(obj)dts/%.dts DTC FORCE
 	$(call cmd_and_fixdep,dts_o_dtb)
-
 dts: $(dtb) FORCE
 
-targets += $(dtb)
 clean-y += *.dtb .*.dtc.tmp .*.dts.tmp
 
-# kboot
-quiet_cmd_copy_kernel = OBJCOPY $@
-      cmd_copy_kernel = $(OBJCOPY) -O binary $< $@
-$(obj)/kernel.bin.tmp: lightcore FORCE
-	$(call if_changed,copy_kernel)
+########################################
+#  KBOOT                               #
+########################################
 
 fixtool: FORCE
-	$(Q)$(MAKE) $(build)=tools/kernelcrc
+	$(Q)$(MAKE) $(build)=tools/kernelcrc/
 
-quiet_cmd_fix_kernel = FIXCRC $@
-      cmd_fix_kernel = tools/kernelcrc/kernelcrc $<
-$(obj)/kernel.bin: $(obj)/kernel.bin.tmp
+quiet_cmd_copy_kernel = OBJCOPY $@
+      cmd_copy_kernel = $(OBJCOPY) -O binary $< $@
+quiet_cmd_fix_kernel  = FIXCRC $@
+      cmd_fix_kernel  = tools/kernelcrc/kernelcrc $@
+$(obj)kernel.bin: lightcore fixtool
+	$(call if_changed,copy_kernel)
 	$(call if_changed,fix_kernel)
-	$(Q)$(MV) $< $@
-$(obj)/kernel.bin: fixtool
 
-$(obj)/kernel.bin.gz: $(obj)/kernel.bin FORCE
+$(obj)kernel.bin.gz: $(obj)kernel.bin FORCE
 	$(call if_changed,gzip)
-$(obj)/kernel.bin.bz2: $(obj)/kernel.bin FORCE
+$(obj)kernel.bin.bz2: $(obj)kernel.bin FORCE
 	$(call if_changed,bzip2)
-$(obj)/kernel.bin.lzma: $(obj)/kernel.bin FORCE
+$(obj)kernel.bin.lzma: $(obj)kernel.bin FORCE
 	$(call if_changed,lzma)
-$(obj)/kernel.bin.xz: $(obj)/kernel.bin FORCE
+$(obj)kernel.bin.xz: $(obj)kernel.bin FORCE
 	$(call if_changed,xzkern)
-$(obj)/kernel.bin.lzo: $(obj)/kernel.bin FORCE
+$(obj)kernel.bin.lzo: $(obj)kernel.bin FORCE
 	$(call if_changed,lzo)
-$(obj)/kernel.bin.lz4: $(obj)/kernel.bin FORCE
+$(obj)kernel.bin.lz4: $(obj)kernel.bin FORCE
 	$(call if_changed,lz4)
-$(obj)/kernel.bin.zst: $(obj)/kernel.bin FORCE
+$(obj)kernel.bin.zst: $(obj)kernel.bin FORCE
 	$(call if_changed,zstd22)
 
 suffix-$(CONFIG_PACK_GZIP)    := .gz
@@ -69,23 +66,26 @@ suffix-$(CONFIG_PACK_LZ4)     := .lz4
 suffix-$(CONFIG_PACK_ZSTD)    := .zst
 
 quiet_cmd_copy_boot = OBJCOPY $@
-      cmd_copy_boot = $(OBJCOPY) -O binary $(obj)/kboot/boot $(obj)/boot.bin
-$(obj)/boot.bin: $(obj)/kernel.bin$(suffix-y) 
+      cmd_copy_boot = $(OBJCOPY) -O binary $(obj)kboot/boot $(obj)boot.bin
+$(obj)boot.bin: $(obj)kernel.bin$(suffix-y)
 ifndef CONFIG_XIP
-	$(Q)$(CP) $(obj)/kernel.bin$(suffix-y) $(obj)/piggy_data
-	$(Q)$(MAKE) $(build)=$(src)/kboot boot
+	$(Q)$(CP) $(obj)kernel.bin$(suffix-y) $(obj)piggy_data
+	$(Q)$(MAKE) $(build)=$(obj)kboot/ boot
 	$(call if_changed,copy_boot)
 endif
-boot: $(obj)/boot.bin
+boot: $(obj)boot.bin
 
-targets += $(obj)/kernel.bin $(obj)/kernel.bin$(suffix-y)
+targets += $(obj)kernel.bin $(obj)kernel.bin$(suffix-y)
 
 clean-suffix += .gz .bz2 .lzma .xz .lzo .lz4 .zst
 clean-y += $(addprefix kernel.bin,$(clean-suffix))
 clean-y += kernel.bin piggy_data boot boot.bin
 
-# uboot
-MKIMAGE := $(srctree)/scripts/mkuboot.sh
+########################################
+#  UBOOT                               #
+########################################
+
+MKIMAGE := scripts/mkuboot.sh
 
 UIMAGE_ARCH         = sandbox
 UIMAGE_COMPRESSION  = none
@@ -102,70 +102,74 @@ quiet_cmd_uimage = UIMAGE  $@
                         -a $(UIMAGE_LOADADDR) -e $(UIMAGE_ENTRYADDR)    \
                         -n $(UIMAGE_NAME) -d $< $@
 
-$(obj)/uImage: $(obj)/boot.bin
+$(obj)uImage: $(obj)boot.bin
 	$(call if_changed,uimage)
 	@echo 'uImage: $@ is ready'
+uboot: $(obj)uImage
 
-uboot: $(obj)/uImage
-
-targets += $(obj)/uImage
 clean-y += uImage
 
-# preload
+########################################
+#  PRELOAD                             #
+########################################
+
 quiet_cmd_copy_preload = OBJCOPY $@
-      cmd_copy_preload = $(OBJCOPY) -O binary $(obj)/preload/preload $(obj)/preload.bin
-      
-$(obj)/preload.bin: FORCE
-	$(Q)$(MAKE) $(build)=$(src)/preload
+      cmd_copy_preload = $(OBJCOPY) -O binary $(obj)preload/preload $(obj)preload.bin
+
+$(obj)preload.bin: FORCE
+	$(Q)$(MAKE) $(build)=$(obj)preload/
 	$(call if_changed,copy_preload)
-preload: $(obj)/preload.bin
+preload: $(obj)preload.bin
 
 ifneq ($(CONFIG_CHIP_X86),)
 preload:
-	$(Q)$(DD) if=$(obj)/preload.bin of=$(obj)/disk.img bs=512 conv=notrunc
-	$(Q)$(DD) if=$(obj)/boot.bin of=$(obj)/disk.img bs=512 seek=63 conv=notrunc
+	$(Q)$(DD) if=$(obj)preload.bin of=$(obj)disk.img bs=512 conv=notrunc
+	$(Q)$(DD) if=$(obj)boot.bin of=$(obj)disk.img bs=512 seek=63 conv=notrunc
 endif
 
 ifneq ($(CONFIG_CHIP_SUNIV),)
 preload: uboot
-	$(Q)$(MAKE) $(build)=tools/sunxi
-	$(Q) tools/sunxi/mksunxiboot $(obj)/preload.bin
-	$(Q)$(DD) if=$(obj)/preload.bin of=$(obj)/disk.img bs=512 conv=notrunc
-	$(Q)$(DD) if=$(obj)/uImage of=$(obj)/disk.img bs=512 seek=64 conv=notrunc
+	$(Q)$(MAKE) $(build)=tools/sunxi/
+	$(Q) tools/sunxi/mksunxiboot $(obj)preload.bin
+	$(Q)$(DD) if=$(obj)preload.bin of=$(obj)disk.img bs=512 conv=notrunc
+	$(Q)$(DD) if=$(obj)uImage of=$(obj)disk.img bs=512 seek=64 conv=notrunc
 endif
 
 ifneq ($(CONFIG_CHIP_ESP8266),)
 preload:
-	$(Q)tools/esp/esptool.py -c esp8266 elf2image -o $(obj)/preload- $(obj)/preload/preload
-	$(Q)tools/esp/esptool.py -c esp8266 image_info $(obj)/preload-0x00000.bin
-	$(Q)$(DD) if=$(obj)/preload-0x00000.bin of=$(obj)/disk.img bs=512 conv=notrunc
-	$(Q)$(DD) if=$(obj)/kernel.bin of=$(obj)/disk.img bs=512 seek=64 conv=notrunc
+	$(Q)tools/esp/esptool.py -c esp8266 elf2image -o $(obj)preload- $(obj)preload/preload
+	$(Q)tools/esp/esptool.py -c esp8266 image_info $(obj)preload-0x00000.bin
+	$(Q)$(DD) if=$(obj)preload-0x00000.bin of=$(obj)disk.img bs=512 conv=notrunc
+	$(Q)$(DD) if=$(obj)kernel.bin of=$(obj)disk.img bs=512 seek=64 conv=notrunc
 endif
 
 ifneq ($(CONFIG_CHIP_ESP32),)
 preload:
-	$(Q)tools/esp/esptool.py -c esp32 elf2image -fm dio -o $(obj)/preload.bin $(obj)/preload/preload
-	$(Q)tools/esp/esptool.py -c esp32 image_info $(obj)/preload.bin 
-	$(Q)$(DD) if=/dev/zero of=$(obj)/disk.img bs=512 count=8 conv=notrunc
-	$(Q)$(DD) if=$(obj)/preload.bin of=$(obj)/disk.img bs=512 seek=8 conv=notrunc
-	$(Q)$(DD) if=$(obj)/kernel.bin of=$(obj)/disk.img bs=512 seek=64 conv=notrunc
+	$(Q)tools/esp/esptool.py -c esp32 elf2image -fm dio -o $(obj)preload.bin $(obj)preload/preload
+	$(Q)tools/esp/esptool.py -c esp32 image_info $(obj)preload.bin
+	$(Q)$(DD) if=/dev/zero of=$(obj)disk.img bs=512 count=8 conv=notrunc
+	$(Q)$(DD) if=$(obj)preload.bin of=$(obj)disk.img bs=512 seek=8 conv=notrunc
+	$(Q)$(DD) if=$(obj)kernel.bin of=$(obj)disk.img bs=512 seek=64 conv=notrunc
 endif
 
-clean-y += preload.bin preload-0x00000.bin disk.img
+clean-y += preload-0x00000.bin
+clean-y += preload.bin disk.img
 
-# run & install
-ckfile := $(obj)/boot.bin
+########################################
+#  RUN & INSTALL                       #
+########################################
+
+ckfile := $(obj)boot.bin
 ifneq ($(ckfile), $(wildcard $(ckfile)))
-run install: FORCE
+run install uninsall: FORCE
 	$(Q)$(ECHO) "Please run make first"
 else
 run: FORCE
-	$(Q)$(SHELL) $(src)/run/$(run_shell)
+	$(Q)$(SHELL) $(obj)run/$(run_shell)
 install: FORCE
-	$(Q)$(SHELL) $(src)/install
-endif
-
+	$(Q)$(SHELL) $(obj)install
 uninsall:
+endif
 
 clean-subdir-y += kboot/
 clean-subdir-y += preload/
