--- a/boot/preload/Makefile
+++ b/boot/preload/Makefile
@@ -7,16 +7,16 @@ tar-$(CONFIG_CHIP_SUNIV)   += suniv/
 obj-y += $(tar-y)
 obj-y += lib/
 
-include-y += $(src)/lib/
+include-y += $(obj)lib/
 
-include $(src)/platform.mk
+include $(obj)platform.mk
 
 preload-asflags-y := -D__ASSEMBLY__
 preload-ccflags-y := -std=gnu11
 preload-acflags-y := -ffreestanding -nostdinc -Wall -Werror \
                      -fno-PIE  -fno-stack-protector \
-                     -ffunction-sections -fdata-sections 
-preload-ldflags-y  := 
+                     -ffunction-sections -fdata-sections
+preload-ldflags-y  :=
 preload-ldsflags-y := -D__ASSEMBLY__
 preload-elfflags-y := -Wl,--gc-sections
 
@@ -28,13 +28,13 @@ ldsflags-y  := $(strip $(preload-ldsflags-y) $(platform-ldsflags-y))
 elfflags-y  := $(strip $(preload-elfflags-y) $(platform-elfflags-y))
 
 quiet_cmd_link_preload = $(ECHO_ELF)  $@
-      cmd_link_preload = $(RANLIB) $(obj)/built-in.a; \
-                         $(LD) $(ldflags-y) -r -o $(obj)/built-in.o --whole-archive $(obj)/built-in.a; \
-                         $(MKELF) $(elfflags-y) -o $@ $(obj)/built-in.o $(preload-lib)
-$(obj)/preload: $(obj)/built-in.a FORCE
+      cmd_link_preload = $(RANLIB) $(obj)built-in.a; \
+                         $(LD) $(ldflags-y) -r -o $(obj)built-in.o --whole-archive $(obj)built-in.a; \
+                         $(MKELF) $(elfflags-y) -o $@ $(obj)built-in.o $(preload-lib)
+$(obj)preload: $(obj)built-in.a FORCE
 	$(call if_changed,link_preload)
-preload: $(obj)/preload 
-	
+preload: $(obj)preload
+
 ifneq ($(tar-y),)
 always-y += preload
 endif
