--- a/scripts/gcc-plugins/Makefile
+++ b/scripts/gcc-plugins/Makefile
@@ -1,10 +1,10 @@
 # SPDX-License-Identifier: GPL-2.0
 
-$(obj)/randomize_layout_plugin.so: $(objtree)/$(obj)/randomize_layout_seed.h
+$(obj)randomize_layout_plugin.so: $(objtree)/$(obj)randomize_layout_seed.h
 quiet_cmd_create_randomize_layout_seed = GENSEED $@
 cmd_create_randomize_layout_seed = \
-  $(CONFIG_SHELL) $(srctree)/$(src)/gen-random-seed.sh $@ $(objtree)/include/generated/randomize_layout_hash.h
-$(objtree)/$(obj)/randomize_layout_seed.h: FORCE
+  $(CONFIG_SHELL) $(srctree)/$(obj)gen-random-seed.sh $@ $(objtree)/include/generated/randomize_layout_hash.h
+$(objtree)/$(obj)randomize_layout_seed.h: FORCE
 	$(call if_changed,create_randomize_layout_seed)
 targets += randomize_layout_seed.h randomize_layout_hash.h
 
@@ -37,26 +37,26 @@ plugin-objs	:= $(sort $(foreach m, $(plugin-multi), $($(m:%.so=%-objs))))
 targets += $(plugin-single) $(plugin-multi) $(plugin-objs)
 clean-files += *.so
 
-plugin-single	:= $(addprefix $(obj)/, $(plugin-single))
-plugin-multi	:= $(addprefix $(obj)/, $(plugin-multi))
-plugin-objs	:= $(addprefix $(obj)/, $(plugin-objs))
+plugin-single	:= $(addprefix $(obj), $(plugin-single))
+plugin-multi	:= $(addprefix $(obj), $(plugin-multi))
+plugin-objs	:= $(addprefix $(obj), $(plugin-objs))
 
 quiet_cmd_plugin_cxx_so_c = HOSTCXX $@
       cmd_plugin_cxx_so_c = $(HOSTCXX) $(plugin_cxxflags) $(plugin_ldflags) -o $@ $<
 
-$(plugin-single): $(obj)/%.so: $(src)/%.c FORCE
+$(plugin-single): $(obj)%.so: $(obj)%.c FORCE
 	$(call if_changed_dep,plugin_cxx_so_c)
 
 quiet_cmd_plugin_ld_so_o = HOSTLD  $@
       cmd_plugin_ld_so_o = $(HOSTCXX) $(plugin_ldflags) -o $@ \
-			   $(addprefix $(obj)/, $($(target-stem)-objs))
+			   $(addprefix $(obj), $($(target-stem)-objs))
 
 $(plugin-multi): FORCE
 	$(call if_changed,plugin_ld_so_o)
-$(foreach m, $(notdir $(plugin-multi)), $(eval $(obj)/$m: $(addprefix $(obj)/, $($(m:%.so=%-objs)))))
+$(foreach m, $(notdir $(plugin-multi)), $(eval $(obj)$m: $(addprefix $(obj), $($(m:%.so=%-objs)))))
 
 quiet_cmd_plugin_cxx_o_c = HOSTCXX $@
       cmd_plugin_cxx_o_c = $(HOSTCXX) $(plugin_cxxflags) -c -o $@ $<
 
-$(plugin-objs): $(obj)/%.o: $(src)/%.c FORCE
+$(plugin-objs): $(obj)%.o: $(obj)%.c FORCE
 	$(call if_changed_dep,plugin_cxx_o_c)
