--- a/boot/kboot/lib/Makefile
+++ b/boot/kboot/lib/Makefile
@@ -5,10 +5,10 @@ obj-y += memtest.o
 obj-y += string.o
 obj-y += vsprintf.o
 
-piggy := $(addprefix _piggy_,$(wildcard $(obj)/piggy.o))
+piggy := $(addprefix _piggy_,$(wildcard $(obj)piggy.o))
 $(piggy):
 	$(RM) $(patsubst _piggy_%,%,$@)
-$(obj)/piggy.o: $(piggy)
+$(obj)piggy.o: $(piggy)
 obj-y += piggy.o
 
 ifndef CONFIG_PACK_NONE
