--- a/scripts/dtc/Makefile
+++ b/scripts/dtc/Makefile
@@ -3,12 +3,10 @@
 
 hostprogs-always-y += dtc
 
-dtc-objs	:= dtc.o flattree.o fstree.o data.o livetree.o treesource.o \
-		   srcpos.o checks.o util.o
+dtc-objs	:= dtc.o flattree.o fstree.o data.o livetree.o treesource.o srcpos.o checks.o util.o
 dtc-objs	+= dtc-lexer.lex.o dtc-parser.tab.o
 
-# Source files need to get at the userspace version of libfdt_env.h to compile
-HOST_EXTRACFLAGS += -I $(srctree)/$(src)/libfdt
+hostc-flags-y += -I $(obj)libfdt
 
 ifeq ($(shell pkg-config --exists yaml-0.1 2>/dev/null && echo yes),)
 ifneq ($(CHECK_DT_BINDING)$(CHECK_DTBS),)
@@ -29,4 +27,4 @@ HOSTCFLAGS_dtc-lexer.lex.o := -I $(srctree)/$(src)
 HOSTCFLAGS_dtc-parser.tab.o := -I $(srctree)/$(src)
 
 # dependencies on generated files need to be listed explicitly
-$(obj)/dtc-lexer.lex.o: $(obj)/dtc-parser.tab.h
+$(obj)dtc-lexer.lex.o: $(obj)dtc-parser.tab.h
