--- a/configs/x86_defconfig
+++ b/configs/x86_defconfig
@@ -50,6 +50,13 @@ CONFIG_INPUT_ATKBD=y
 CONFIG_INPUT_MOUSE=y
 CONFIG_INPUT_PSMSE=y
 
+CONFIG_MFD=y
+CONFIG_MFD_ICH=y
+
+CONFIG_MTD=y
+CONFIG_SPINOR=y
+CONFIG_SPINOR_INTEL=y
+
 CONFIG_NETD=y
 
 CONFIG_PARALLEL=y
