--- a/arch/Makefile
+++ b/arch/Makefile
@@ -1,5 +1,7 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
 obj-$(CONFIG_ARCH_ARM)      += arm/
 obj-$(CONFIG_ARCH_CSKY)     += csky/
 obj-$(CONFIG_ARCH_RISCV)    += riscv/
 obj-$(CONFIG_ARCH_X86)      += x86/
+obj-$(CONFIG_ARCH_X86_64)   += x86/
 obj-$(CONFIG_ARCH_XTENSA)   += xtensa/
