--- a/configs/x86_64_defconfig
+++ b/configs/x86_64_defconfig
@@ -1,20 +1,19 @@
-# Default configuration of x86 computer
+# Default configuration of x86_64 computer
 
 # arch
-CONFIG_ARCH_X86=y
+CONFIG_ARCH_X86_64=y
 
 # mem
 CONFIG_MMU=y
-CONFIG_PAGE_OFFSET=0xc0000000
-CONFIG_HIGHMAP_OFFSET=0xf0000000
+CONFIG_PAGE_OFFSET=0xffffffff80000000
 
 CONFIG_SPARCEMEM=y
 
 CONFIG_RAM_BASE=0
 CONFIG_REGION_DMA=y
+CONFIG_REGION_DMA32=y
 CONFIG_DMA_SIZE=0x1000000
-CONFIG_REGION_HIMEM=y
-CONFIG_HIGHMEM_OFFSET=0x30000000
+CONFIG_DMA32_SIZE=0xFF000000
 
 # drivers
 CONFIG_ACPI=y
