--- a/mm/Makefile
+++ b/mm/Makefile
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += init.o memblock.o kmalloc/
 obj-y += region.o model.o page.o
-obj-y += vmem.o highmem.o
+obj-y += vmem.o vmap.o highmem.o
 obj-y += ioremap.o vmalloc.o
 obj-$(CONFIG_MEMTEST) += memtest.o
