--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -12,15 +12,19 @@ config RANDOMIZE_BASE
     bool "Randomize the address of the kernel image (KASLR)"
     depends on RELOCATABLE
 
+config X86_PAE
+    bool "PAE (Physical Address Extension) Support"
+    depends on ARCH_X86
+
 choice
-    prompt "Pre-console choice"
+    prompt "Previous Console Choice"
     default PRECON_VGA
 
 config PRECON_VGA
-    bool "Use vga as pre-console"
+    bool "Use VGA as Previous Console"
 
 config PRECON_SER
-    bool "Use serial as pre-console"
+    bool "Use Serial as Previous Console"
 
 endchoice
 endmenu
