--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -17,20 +17,11 @@ config RAM_BASE
         Start address of physical memory
 
 config RAM_PAD
-    hex "RAM Pad Offset"
+    hex "RAM Pad Size"
+    depends on MMU
     default 0
     help
         Memory pad for special memory model
-
-config PAGE_OFFSET
-    hex "Kernel Offset"
-
-config HIGHMAP_OFFSET
-    hex "Hige Memory Offset"
-    depends on REGION_HIMEM
-    help
-        The virtual address to which the high-end memory
-        will be mapped
 
 choice
     prompt "Memory Model"
@@ -44,33 +35,32 @@ config SPARCEMEM
 
 endchoice
 
-menu "Memory region"
+menu "Memory Region"
 
 config REGION_DMA
-    bool "DMA region"
-    depends on ARCH_HAS_DMA
+    bool "DMA Region"
 
 config DMA_SIZE
-    hex "DMA region size"
+    hex "DMA Region Size"
     depends on REGION_DMA
 
 config REGION_DMA32
-    bool "DMA32 region"
-    depends on ARCH_HAS_DMA32
+    bool "DMA32 Region"
+    depends on REGION_DMA
 
 config DMA32_SIZE
-    hex "DMA32 region size"
+    hex "DMA32 Region Size"
     depends on REGION_DMA32
 
 config REGION_HIMEM
-    bool "HIMEM region"
+    bool "HIMEM Region"
     depends on ARCH_HAS_HIMEM && MMU
     help
         If direct mapping cannot access all memory, turn on
         the high-end memory option
 
 config HIGHMEM_OFFSET
-    hex "High memory region offset"
+    hex "HIMEM Offset"
     depends on REGION_HIMEM
 
 endmenu
@@ -83,6 +73,16 @@ config XIP_BASE
     hex "Xip PHYSADDR(ROM)"
     depends on XIP
 
+config PAGE_OFFSET
+    hex "Kernel Offset"
+
+config HIGHMAP_OFFSET
+    hex "Hige Memory Offset"
+    depends on REGION_HIMEM
+    help
+        The virtual address to which the high-end memory
+        will be mapped
+
 choice
     prompt "Kmem allocator select"
     default MM_SLOB
@@ -93,12 +93,9 @@ config MM_SLAB
 config MM_SLOB
     bool "SLOB (Simple SLAB)"
 
-config MM_SIMPLE
-    bool "Simple Allocator"
-
 endchoice
 
-menu "slob config"
+menu "Slob Config"
     depends on MM_SLOB
 
 config SLOB_HUGE_LINE
@@ -111,23 +108,23 @@ config SLOB_MEDIUM_LINE
 
 endmenu
 
-choice
-    prompt "simple allocator config"
-    depends on MM_SIMPLE
-    default MM_SIMPLE_FIRST
-
-config MM_SIMPLE_FIRST
-    bool "first fit"
-
-config MM_SIMPLE_BEST
-    bool "best fit"
-
-config MM_SIMPLE_WORST
-    bool "worst fit"
-
-endchoice
-
 config MEMTEST
     bool "Memory Test Support"
 
 endmenu
+
+config PGTABLE_LEVEL5
+    bool
+
+config PGTABLE_LEVEL4
+    bool
+
+config PGTABLE_LEVEL3
+    bool
+
+config PGTABLE_LEVEL
+    int
+    default 5 if X86_5LEVEL
+    default 4 if X86_64
+    default 3 if X86_PAE
+    default 2
