--- a/arch/csky/Makefile
+++ b/arch/csky/Makefile
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += boot/ lib/ mm/
 obj-y += entry.o setup.o proc.o irq.o
-obj-y += traps.o
+obj-y += backtrace.o traps.o
 
 extra-y += kernel.lds
 clean-y += include/generated/
