--- a/configs/gx6605s_defconfig
+++ b/configs/gx6605s_defconfig
@@ -6,6 +6,7 @@ CONFIG_ARCH_CSKY=y
 # mem
 CONFIG_MMU=y
 CONFIG_PAGE_OFFSET=0x80000000
+CONFIG_IOREMAP_OFFSET=0xa0000000
 CONFIG_HIGHMAP_OFFSET=0xc0000000
 
 CONFIG_SPARCEMEM=y
@@ -24,6 +25,12 @@ CONFIG_CLKSRC_GX6605=y
 
 CONFIG_GPIO=y
 CONFIG_GPIO_GENERIC=y
+
+CONFIG_RTC=y
+CONFIG_RTC_GX6605S=y
+
+CONFIG_SPI=y
+CONFIG_SPI_GX6605S=y
 
 CONFIG_UART=y
 CONFIG_UART_8250=y
