--- a/drivers/spi/Makefile
+++ b/drivers/spi/Makefile
@@ -1,4 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += core/
-
+obj-$(CONFIG_SPI_GX6605S) += gx6605s.o
 obj-$(CONFIG_SPI_SUNIV) += suniv.o
