--- a/drivers/rtc/Makefile
+++ b/drivers/rtc/Makefile
@@ -1,4 +1,5 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += core/
-
 obj-$(CONFIG_RTC_DS1302) += ds1302.o
+obj-$(CONFIG_RTC_GX6605S) += gx6605s.o
 obj-$(CONFIG_RTC_MC146818) += mc146818.o
