[preload] gx6605s add timer (fix some bug in info)

--- a/boot/preload/gx6605s/driver/Makefile
+++ b/boot/preload/gx6605s/driver/Makefile
@@ -1,4 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += ccu.o dramc.o
+obj-y += ccu.o dramc.o timer.o
 obj-y += uart.o spi.o norflash.o
 obj-$(CONFIG_PRELOAD_WDT) += wdt.o
