--- a/configs/esp8266_defconfig
+++ b/configs/esp8266_defconfig
@@ -1,11 +1,15 @@
 # Default configuration of esp8266
 
+# arch
 CONFIG_ARCH_XTENSA=y
 CONFIG_XTENSA_VARIANT_LX106=y
 
+# mem
+CONFIG_XIP=y
 CONFIG_XIP_BASE=0x40208000
 CONFIG_PAGE_OFFSET=0x3FFE8000
 
+# drivers
 CONFIG_DT=y
 CONFIG_I2S=y
 CONFIG_SPI=y
@@ -14,5 +18,6 @@ CONFIG_UART=y
 CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_ESP8266=y
 
+# preload
 CONFIG_CHIP_ESP8266=y
 CONFIG_PRELOAD=y
