--- a/configs/gx6605s_defconfig
+++ b/configs/gx6605s_defconfig
@@ -23,6 +23,9 @@ CONFIG_BUILTIN_DTB_PATH="boot/dts/gx6605s.dtb"
 CONFIG_IRQCHIP_GX6605S=y
 CONFIG_CLKSRC_GX6605=y
 
+CONFIG_CLK=y
+CONFIG_CLK_GX6605=y
+
 CONFIG_GPIO=y
 CONFIG_GPIO_GENERIC=y
 
@@ -44,6 +47,6 @@ CONFIG_WATCHDOG_GX6605S=y
 # kboot
 CONFIG_LOAD_ADDR=0x92000000
 
-# debug
+# preload
 CONFIG_PRELOAD=y
 CONFIG_CHIP_GX6605S=y
