--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0
 obj-y += cpu/ device/ irq/ lock/ sched/
 obj-y += task/ printk/ binfmt/
-obj-y += crash.o sleep.o syscall.o timer.o
-
-obj-y += resource.o
+obj-y += crash.o sleep.o syscall.o
+obj-y += timer.o resource.o
+obj-y += power.o pevent.o
