[kboot] add kernel e820 supported

--- a/arch/x86/Makefile
+++ b/arch/x86/Makefile
@@ -2,7 +2,7 @@
 obj-y += boot/ lib/ mm/
 obj-y += setup.o entry.o proc.o syscall.o
 obj-y += idt.o irq.o backtrace.o traps.o
-obj-y += tsc.o pre_printk.o
+obj-y += e820.o tsc.o pre_printk.o
 
 obj-y += doublefault.o
 
