--- a/boot/kboot/x86/Makefile
+++ b/boot/kboot/x86/Makefile
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += header.o startup.o main.o page.o segment.o video.o memdetect.o
+obj-y += header.o startup.o memdetect.o
+obj-y += main.o page.o segment.o video.o
 obj-$(CONFIG_KASLR) += kaslr.o
 
-memdetect.o-flags-y := -m16
+memdetect-flags-y := -m16 -fno-pic
