--- a/boot/kboot/x86/Makefile
+++ b/boot/kboot/x86/Makefile
@@ -1,3 +1,3 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += boot/ main.o
-obj-y += page.o segment.o video.o
+obj-y += boot/ realmode/
+obj-y += main.o page.o segment.o video.o
