--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -23,6 +23,7 @@ config ARCH_X86_32
     select ARCH_HAS_HUGE_PMD
     select ARCH_HAS_MMU
     select ARCH_HAS_PMIO
+    select ARCH_HAS_KASAN
 
 config ARCH_X86_64
     bool "X86_64"
