--- a/init/Makefile
+++ b/init/Makefile
@@ -1,2 +1,3 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += start.o initcall.o inittask.o
+obj-y += start.o initcall.o
+obj-y += inittask.o mount.o
