--- a/lib/Makefile
+++ b/lib/Makefile
@@ -2,7 +2,7 @@
 obj-y += libc/ font/ crypto/
 obj-y += rbtree.o sort.o klist.o
 obj-y += kfifo.o bitmap.o ncache.o
-obj-y += size.o time.o
+obj-y += size.o time.o idr.o
 obj-$(CONFIG_ARCH_32BIT) += divdi3.o
 obj-$(CONFIG_ACPI) += acpica/
 obj-$(CONFIG_DT) += fdt/
