--- a/usr/selftest/lib/Kconfig
+++ b/usr/selftest/lib/Kconfig
@@ -4,6 +4,10 @@ menuconfig SELFTEST_LIB
     default y
 if SELFTEST_LIB
 
+config SELFTEST_LIB_IDR
+    bool "IDR Test"
+    default y
+
 config SELFTEST_LIB_NCACHE
     bool "Ncache Test"
     default y
